--- a/api/master_rest_v1.yaml
+++ b/api/master_rest_v1.yaml
@@ -135,53 +135,53 @@ paths:
 
   /api/v1/workers/events:
     get:
-        tags:
-            - Worker
-        operationId: getWorkerEvents
-        description: List the worker events.
-        responses:
-          "200":
-            description: The request was successful.
-            content:
-                application/json:
-                  schema:
-                    $ref: '#/components/schemas/WorkerEvent'
+      tags:
+        - Worker
+      operationId: getWorkerEvents
+      description: List the worker events.
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkerEvent'
     post:
-        tags:
-            - Worker
-        operationId: sendWorkerEvent
-        description: Send worker event.
-        requestBody:
-            content:
-                application/json:
-                    schema:
-                        $ref: '#/components/schemas/SendWorkerEventRequest'
-        responses:
-          "200":
-            description: The request was successful.
-            content:
-                application/json:
-                  schema:
-                    $ref: '#/components/schemas/SendWorkerEventResponse'
+      tags:
+        - Worker
+      operationId: sendWorkerEvent
+      description: Send worker event.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SendWorkerEventRequest'
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SendWorkerEventResponse'
 
   /api/v1/workers/exclude:
     post:
-        tags:
-            - Worker
-        operationId: excludeWorker
-        description: Exclude worker.
-        requestBody:
-            content:
-                application/json:
-                  schema:
-                    $ref: '#/components/schemas/ExcludeWorkerRequest'
-        responses:
-          "200":
-            description: The request was successful.
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ExcludeWorkerResponse'
+      tags:
+        - Worker
+      operationId: excludeWorker
+      description: Exclude worker.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExcludeWorkerRequest'
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExcludeWorkerResponse'
 
   /api/v1/applications:
     get:
@@ -245,7 +245,7 @@ components:
       properties:
         configs:
           type: array
-          default: []
+          default: [ ]
           items:
             $ref: '#/components/schemas/Config'
 
@@ -265,7 +265,7 @@ components:
         configs:
           type: array
           description: the config items.
-          default: []
+          default: [ ]
           items:
             $ref: '#/components/schemas/Config'
 
@@ -283,22 +283,22 @@ components:
           description: The state of the thread.
         stackTrace:
           type: array
-          default: []
+          default: [ ]
           description: The stacktrace of the thread.
           items:
             type: string
         blockedByThreadId:
-            type: integer
-            description: The id of the thread that the current thread is blocked by.
+          type: integer
+          description: The id of the thread that the current thread is blocked by.
         blockedByLock:
-            type: string
-            description: The lock that the current thread is blocked by.
+          type: string
+          description: The lock that the current thread is blocked by.
         holdingLocks:
-            type: array
-            default: []
-            description: The locks that the current thread is holding.
-            items:
-                type: string
+          type: array
+          default: [ ]
+          description: The locks that the current thread is holding.
+          items:
+            type: string
       required:
         - threadId
         - threadName
@@ -310,7 +310,7 @@ components:
       properties:
         threadStacks:
           type: array
-          default: []
+          default: [ ]
           description: The thread stacks.
           items:
             $ref: '#/components/schemas/ThreadStack'
@@ -322,7 +322,7 @@ components:
       properties:
         shuffleIds:
           type: array
-          default: []
+          default: [ ]
           description: The shuffle ids.
           items:
             type: string
@@ -346,7 +346,7 @@ components:
       properties:
         applications:
           type: array
-          default: []
+          default: [ ]
           description: The applications.
           items:
             $ref: '#/components/schemas/ApplicationHeartbeat'
@@ -358,7 +358,7 @@ components:
       properties:
         hostnames:
           type: array
-          default: []
+          default: [ ]
           description: The hostnames of the applications.
           items:
             type: string
@@ -412,48 +412,48 @@ components:
         - address
 
     MasterCommitInfo:
-        type: object
-        properties:
-          commitIndex:
-            type: string
-            description: The commit index of the master.
-          id:
-            type: string
-            description: The id of the master.
-          address:
-            type: string
-            description: The address of the master.
-          clientAddress:
-            type: string
-            description: The client address of the master.
-          startUpRole:
-            type: string
-            description: The start up role of the master.
-        required:
-          - commitIndex
-          - id
-          - address
-          - clientAddress
-          - startUpRole
+      type: object
+      properties:
+        commitIndex:
+          type: string
+          description: The commit index of the master.
+        id:
+          type: string
+          description: The id of the master.
+        address:
+          type: string
+          description: The address of the master.
+        clientAddress:
+          type: string
+          description: The client address of the master.
+        startUpRole:
+          type: string
+          description: The start up role of the master.
+      required:
+        - commitIndex
+        - id
+        - address
+        - clientAddress
+        - startUpRole
 
     MasterInfoResponse:
-        type: object
-        properties:
-          groupId:
-            type: string
-            description: The group id of the master.
-          leader:
-            $ref: '#/components/schemas/MasterLeader'
-          masterCommitInfo:
-            type: array
-            default: []
-            description: The commit info of the master.
-            items:
-              $ref: '#/components/schemas/MasterCommitInfo'
-        required:
-          - groupId
-          - leader
-          - masterCommitInfo
+      type: object
+      properties:
+        groupId:
+          type: string
+          description: The group id of the master.
+        leader:
+          $ref: '#/components/schemas/MasterLeader'
+        masterCommitInfo:
+          type: array
+          default: [ ]
+          description: The commit info of the master.
+          items:
+            $ref: '#/components/schemas/MasterCommitInfo'
+      required:
+        - groupId
+        - leader
+        - masterCommitInfo
 
     WorkerInfo:
       type: object
@@ -522,57 +522,57 @@ components:
         - internalPort
 
     WorkersResponse:
-        type: object
-        properties:
-          workers:
-            type: array
-            default: []
-            description: The workers.
-            items:
-                $ref: '#/components/schemas/WorkerInfo'
-          lostWorkers:
-            type: array
-            default: []
-            description: The lost workers.
-            items:
-                $ref: '#/components/schemas/WorkerInfo'
-          excludedWorkers:
-            type: array
-            default: []
-            description: The excluded workers.
-            items:
-                $ref: '#/components/schemas/WorkerInfo'
-          manualExcludedWorkers:
-            type: array
-            default: [ ]
-            description: The manual excluded workers.
-            items:
-              $ref: '#/components/schemas/WorkerInfo'
-          shutdownWorkers:
-            type: array
-            default: []
-            description: The shutdown workers.
-            items:
-                $ref: '#/components/schemas/WorkerInfo'
-          decommissionWorkers:
-            type: array
-            default: []
-            description: The decommission workers.
-            items:
-                $ref: '#/components/schemas/WorkerInfo'
-        required:
-            - workers
+      type: object
+      properties:
+        workers:
+          type: array
+          default: [ ]
+          description: The workers.
+          items:
+            $ref: '#/components/schemas/WorkerInfo'
+        lostWorkers:
+          type: array
+          default: [ ]
+          description: The lost workers.
+          items:
+            $ref: '#/components/schemas/WorkerInfo'
+        excludedWorkers:
+          type: array
+          default: [ ]
+          description: The excluded workers.
+          items:
+            $ref: '#/components/schemas/WorkerInfo'
+        manualExcludedWorkers:
+          type: array
+          default: [ ]
+          description: The manual excluded workers.
+          items:
+            $ref: '#/components/schemas/WorkerInfo'
+        shutdownWorkers:
+          type: array
+          default: [ ]
+          description: The shutdown workers.
+          items:
+            $ref: '#/components/schemas/WorkerInfo'
+        decommissionWorkers:
+          type: array
+          default: [ ]
+          description: The decommission workers.
+          items:
+            $ref: '#/components/schemas/WorkerInfo'
+      required:
+        - workers
 
     WorkerEventInfo:
       type: object
       properties:
         eventType:
-            type: string
-            description: The type of the event.
+          type: string
+          description: The type of the event.
         eventStartTime:
-            type: integer
-            format: int64
-            description: The start time of the event.
+          type: integer
+          format: int64
+          description: The start time of the event.
 
     WorkerEvent:
       type: object
@@ -588,137 +588,138 @@ components:
         - event
 
     PartitionLocationData:
-        type: object
-        properties:
-          idEpoch:
-            type: integer
-            format: int64
-            description: The id and epoch.
-          hostAndPorts:
-            type: string
-            description: The host and ports.
-          mode:
-            type: string
-            description: The mode of the partition location data.
-          peer:
-            type: string
-            description: The peer of the partition location data.
-          storage:
-            type: string
-            description: The storage of the partition location data.
-          mapIdBitMap:
-            type: string
-            description: The map id bitmap of the partition location data.
-        required:
-          - idEpoch
-          - hostAndPorts
-          - mode
-          - peer
-          - storage
-          - mapIdBitMap
+      type: object
+      properties:
+        idEpoch:
+          type: integer
+          format: int64
+          description: The id and epoch.
+        hostAndPorts:
+          type: string
+          description: The host and ports.
+        mode:
+          type: string
+          description: The mode of the partition location data.
+        peer:
+          type: string
+          description: The peer of the partition location data.
+        storage:
+          type: string
+          description: The storage of the partition location data.
+        mapIdBitMap:
+          type: string
+          description: The map id bitmap of the partition location data.
+      required:
+        - idEpoch
+        - hostAndPorts
+        - mode
+        - peer
+        - storage
+        - mapIdBitMap
 
     WorkerId:
-        type: object
-        properties:
-          host:
-            type: string
-            description: The host of the worker.
-          rpcPort:
-            type: integer
-            format: int32
-            description: The rpc port of the worker.
-          pushPort:
-            type: integer
-            format: int32
-            description: The push port of the worker.
-          fetchPort:
-            type: integer
-            format: int32
-            description: The fetch port of the worker.
-          replicatePort:
-            type: integer
-            format: int32
-            description: The replicate port of the worker.
-        required:
-          - host
-          - rpcPort
-          - pushPort
-          - fetchPort
-          - replicatePort
+      type: object
+      properties:
+        host:
+          type: string
+          description: The host of the worker.
+        rpcPort:
+          type: integer
+          format: int32
+          description: The rpc port of the worker.
+        pushPort:
+          type: integer
+          format: int32
+          description: The push port of the worker.
+        fetchPort:
+          type: integer
+          format: int32
+          description: The fetch port of the worker.
+        replicatePort:
+          type: integer
+          format: int32
+          description: The replicate port of the worker.
+      required:
+        - host
+        - rpcPort
+        - pushPort
+        - fetchPort
+        - replicatePort
 
     ExcludeWorkerRequest:
-        type: object
-        properties:
-          add:
-            type: array
-            default: []
-            description: The workers to be added to the excluded workers.
-            items:
-              $ref: '#/components/schemas/WorkerId'
-          remove:
-            type: array
-            default: []
-            description: The workers to be removed from the excluded workers.
-            items:
-              $ref: '#/components/schemas/WorkerId'
+      type: object
+      properties:
+        add:
+          type: array
+          default: [ ]
+          description: The workers to be added to the excluded workers.
+          items:
+            $ref: '#/components/schemas/WorkerId'
+        remove:
+          type: array
+          default: [ ]
+          description: The workers to be removed from the excluded workers.
+          items:
+            $ref: '#/components/schemas/WorkerId'
 
     ExcludeWorkerResponse:
-        type: object
-        properties:
-          success:
-            type: boolean
-            description: The result of the exclude worker request.
-          message:
-            type: string
-            description: The message of the exclude worker request.
-        required:
-          - success
+      type: object
+      properties:
+        success:
+          type: boolean
+          description: The result of the exclude worker request.
+        message:
+          type: string
+          description: The message of the exclude worker request.
+      required:
+        - success
 
     SendWorkerEventRequest:
-        type: object
-        properties:
-          eventType:
-            type: string
-            description: The type of the event.
-          workers:
-            type: array
-            default: []
-            description: The workers to send the event.
-            items:
-              $ref: '#/components/schemas/WorkerId'
-        required:
-          - eventType
-          - worker
+      type: object
+      properties:
+        eventType:
+          type: string
+          description: The type of the event.
+        workers:
+          type: array
+          default: [ ]
+          description: The workers to send the event.
+          items:
+            $ref: '#/components/schemas/WorkerId'
+      required:
+        - eventType
+        - worker
 
     SendWorkerEventResponse:
-        type: object
-        properties:
-          success:
-            type: boolean
-            description: The result of the worker event request.
-          message:
-            type: string
-            description: The message of the worker event request.
-        required:
-          - success
+      type: object
+      properties:
+        success:
+          type: boolean
+          description: The result of the worker event request.
+        message:
+          type: string
+          description: The message of the worker event request.
+      required:
+        - success
 
     WorkerExitRequest:
-        type: object
-        properties:
-          type:
-            type: string
-            description: The type of the worker exit request.
-        required:
-          - type
+      type: object
+      properties:
+        type:
+          type: string
+          description: The type of the worker exit request.
+      required:
+        - type
 
     WorkerExitResponse:
-        type: object
-        properties:
-          success:
-            type: boolean
-            description: The result of the worker exit request.
-          message:
-            type: string
-            description: The message of the worker exit request.
-        required:
-          - success
+      type: object
+      properties:
+        success:
+          type: boolean
+          description: The result of the worker exit request.
+        message:
+          type: string
+          description: The message of the worker exit request.
+      required:
+        - success
+        - message
